--- a/Autobus/Resources/Resource.xaml
+++ b/Autobus/Resources/Resource.xaml
@@ -95,8 +95,8 @@
         <GradientStop ice:Freeze="True" Offset="1" Color="#FFC1D3EA" />
     </LinearGradientBrush>
     <LinearGradientBrush x:Key="GroupBoxBackGround" ice:Freeze="True" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0" EndPoint="0.5,1">
-        <GradientStop ice:Freeze="True" Offset="1" Color="#FE00B6E8" />
-        <GradientStop ice:Freeze="True" Color="#FF48F3CA" />
+        <GradientStop ice:Freeze="True" Offset="1" Color="#FE00C8FF" />
+        <GradientStop ice:Freeze="True" Color="turquoise" />
     </LinearGradientBrush>
     <collections:ArrayList x:Key="İller">
         <collections:DictionaryEntry Key="1" Value="ADANA" />
